--- a/RLab2.rmd
+++ b/RLab2.rmd
@@ -18,4 +18,7 @@ When you click the **Knit** button a document will be generated that includes bo
 ```{r cars}
 summary(cars)
 ```
-
+#This is a basic plot that we have made some changes
+```{r plot}
+plot(1:10)
+```
