--- a/RLab2.rmd
+++ b/RLab2.rmd
@@ -20,5 +20,5 @@ summary(cars)
 ```
 #This is a basic plot that we have made some changes
 ```{r plot}
-plot(1:10)
+plot(1:10, xlab = "one to ten")
 ```
